# agnes-mcp

./: .gitignore  CONTRIBUTING.md  README.md  README_CN.md  fix_all.py  publish_pypi.bat  pyproject.toml  test_server.py
.github/workflows/: ci.yml
agnes_mcp/: __init__.py  server.py
